sqlite database, user model, and signing up user authorization added

--- a/src/application/templates/auth/login.html
+++ b/src/application/templates/auth/login.html
@@ -2,8 +2,8 @@
 {% block signin %}
 <div class="login-panel">
     <form class="login-form">
-        <input class="username" placeholder="Username">
-        <input type="password" class="password" placeholder="Password">
+        <input name="name" class="username" placeholder="Username" required>
+        <input name="password" type="password" class="password" placeholder="Password" required>
         <input type="submit" class="submit" value="Sign in">
     </form>
 </div>
