--- a/src/application/templates/base.html
+++ b/src/application/templates/base.html
@@ -15,7 +15,7 @@
                     <a class="nav-link" href="{{ url_for('home.home_page') }}">Train</a>
                 </div>
                 <div class="nav nav-user">
-                    <a class="nav-link" href="{{ url_for('auth.sign_in') }}">Sign in</a>
+                    <a class="nav-link" href="{{ url_for('auth.login') }}">Sign in</a>
                     <a class="nav-link" href="{{ url_for('auth.sign_up') }}">Sign up</a>
                 </div>
             </nav>
