--- a/src/application/static/css-styles/styles.css
+++ b/src/application/static/css-styles/styles.css
@@ -7,11 +7,13 @@ html, body {
     min-height: 100%;
     display: flex;
     flex-direction: column;
+    background-color: #068D9D;
 }
 
 .header {
     padding: 5vh 10vw;
-    background-color: rgb(230, 230, 230);
+    background-color: #2B4162;
+    
 }
 
 .navbar {
@@ -22,7 +24,14 @@ html, body {
 
 .nav-link {
     text-decoration: none;
-    color: black;
+    color: white;
+    font-family: Arial, sans-serif;
+    transition: 200ms linear color;
+    font-size: 1.2em;
+}
+
+.nav-link:hover {
+    color: #068D9D;
 }
 
 .nav {
@@ -39,26 +48,43 @@ html, body {
 }
 
 .login-panel {
-    padding-top: 30vh;
+    margin:20vh 35vw;
+    padding: 10vh 5vw;
+    border-radius: 0.7em;
+    background-color: #F4F3EE;
 }
 
 .login-form .username,
 .login-form .password {
     border-radius: 5px;
-    border: 1px solid grey;
-    width: 250px;
-    background-color: rgb(230, 230, 230);;
+    border: 1px solid #2B4162;
+    width: 20vw;
+    background-color: rgb(240, 240, 240);
+    padding: 15px 10px;
+    font-family: Arial, sans-serif;
+    font-size: 1em;
+}
+
+.login-form .username:focus,
+.login-form .password:focus {
+    outline: none;
+    border:2px solid #068D9D;
 }
 
 .login-form .submit {
+    box-sizing: content-box;
     border-radius: 5px;
-    border: 0.5px solid grey;
-    background-color: rgb(230, 230, 230);
-    padding: 5px 10px;
-    transition: 200ms linear background-color;
+    border: 2px solid #068D9D;
+    color: #068D9D;
+    padding: 10px 10px;
+    transition: 200ms linear all;
+    font-family: Arial, sans-serif;
+    font-size: 1.2em;
+    width: 20vw;
 }
 
 .login-form input.submit:hover {
-    background-color: rgb(143, 143, 143);
+    background-color: #068D9D;
+    color: white;
 }
 
