--- a/src/application/templates/auth/login.html
+++ b/src/application/templates/auth/login.html
@@ -4,7 +4,7 @@
     <form action="/auth/login" method="POST" class="login-form">
         <input name="username" class="username" placeholder="Username" required>
         <input name="password" type="password" class="password" placeholder="Password" required>
-        <input type="submit" class="submit" value="Sign in">
+        <input type="submit" class="submit" value="Log in">
     </form>
 </div>
 {% endblock %}
