--- a/src/application/templates/base.html
+++ b/src/application/templates/base.html
@@ -27,6 +27,12 @@
         </div>
         {% block signin %}{% endblock %}
         {% block signup %}{% endblock %}
+        {% block hero %}
+        <div class="hero">
+            <h1>Flashcards App</h1>
+            <h>App where you can train on your own and many other flashcards.</h>
+        </div>
+        {% endblock %}
     </div>
 </body>
 </html>
