--- a/src/application/templates/auth/login.html
+++ b/src/application/templates/auth/login.html
@@ -1,4 +1,6 @@
 {% extends 'base.html' %}
+{% block title %}Log in{% endblock %}
+{% block hero %}{% endblock %}
 {% block signin %}
 <div class="login-panel">
     {% with messages = get_flashed_messages() %}
