--- a/src/application/templates/auth/signup.html
+++ b/src/application/templates/auth/signup.html
@@ -1,4 +1,6 @@
 {% extends 'base.html' %}
+{% block title %}Sign up{% endblock %}
+{% block hero %}{% endblock %}
 {% block signup %}
 <div class="login-panel">
     {% with messages = get_flashed_messages() %}
