working on profile templates

--- a/src/application/templates/auth/signup.html
+++ b/src/application/templates/auth/signup.html
@@ -1,6 +1,8 @@
 {% extends 'base.html' %}
 {% block title %}Sign up{% endblock %}
+{% block profile %}{% endblock %}
 {% block hero %}{% endblock %}
+{% block signin %}{% endblock %}
 {% block signup %}
 <div class="login-panel">
     {% with messages = get_flashed_messages() %}
