--- a/src/application/templates/auth/login.html
+++ b/src/application/templates/auth/login.html
@@ -1,6 +1,8 @@
 {% extends 'base.html' %}
 {% block title %}Log in{% endblock %}
+{% block profile %}{% endblock %}
 {% block hero %}{% endblock %}
+{% block signup %}{% endblock %}
 {% block signin %}
 <div class="login-panel">
     {% with messages = get_flashed_messages() %}
