--- a/src/application/templates/base.html
+++ b/src/application/templates/base.html
@@ -25,6 +25,7 @@
                 </div>
             </nav>
         </div>
+        {% block profile %}{% endblock %}
         {% block signin %}{% endblock %}
         {% block signup %}{% endblock %}
         {% block hero %}
