--- a/src/application/templates/user/profile.html
+++ b/src/application/templates/user/profile.html
@@ -4,6 +4,12 @@
 {% block signin %}{% endblock %}
 {% block signup %}{% endblock %}
 {% block profile %}
-Profile
-{% block settings %}{% endblock %}
+<div class="main-profile">
+    <div class="user-information">
+        <span>User information</span>
+    </div>
+    <div class="user-collection">
+        <span>Collection</span>
+    </div>
+</div>
 {% endblock %}
