--- a/src/application/templates/base.html
+++ b/src/application/templates/base.html
@@ -31,7 +31,7 @@
         {% block hero %}
         <div class="hero">
             <h1>Flashcards App</h1>
-            <h>App where you can train on your own flashcards.</h>
+            <h>Join Flashcards App and memorize faster.</h>
         </div>
         {% endblock %}
     </div>
