--- a/src/application/templates/flashcards/flashcards.html
+++ b/src/application/templates/flashcards/flashcards.html
@@ -5,6 +5,11 @@
 {% block signup %}{% endblock %}
 {% block hero %}
 <div class="main-collections main-profile">
+    <div class="action-btns">
+        <a href="{{url_for('flashcards.flashcards_training', collection_id=collection.first().collection_id)}}"><button class="submit">Train</button></a>
+        <a href="{{url_for('flashcards.edit_collection')}}"><button class="submit">Edit</button></a>
+        <a href="{{url_for('flashcards.remove_collection', collection_id=collection.first().collection_id)}}"><button class="submit">Remove</button></a>
+    </div>
     {% if collection.count() %}
         {% for flashcard in collection %}
             <div class="flashcard">
