removing row in creating collection

--- a/src/application/templates/flashcards/create_collection.html
+++ b/src/application/templates/flashcards/create_collection.html
@@ -18,6 +18,7 @@
         </div>
         <div class="action-btns" id="create-btns">
             <button class="submit" type="button" id="add-row-btn">Add row</button>
+            <button class="submit" type="button" id="remove-row-btn">Remove row</button>
             <input class="submit" type="submit" value="Create">
         </div>
     </form>
