--- a/src/application/templates/flashcards/create_collection.html
+++ b/src/application/templates/flashcards/create_collection.html
@@ -10,15 +10,15 @@
             <input name="collection-name" id="collection-name" class="card" placeholder="Collection name" required>
         </div>
         <div class="all-flashcards">
-            <div class="flashcard-row flashcard">
+            <div class="flashcard-row flashcard" value="0">
                 <input type="text" name="card-front" class="card card-front" maxlength="200" placeholder="Front" required>
                 <span id="break">|</span>
                 <input type="text" name="card-description" class="card card-description" maxlength="1000" placeholder="Description" required>
+                <button type="button" value="0" id="remove-btn">X</button>
             </div>
         </div>
         <div class="action-btns" id="create-btns">
             <button class="submit" type="button" id="add-row-btn">Add row</button>
-            <button class="submit" type="button" id="remove-row-btn">Remove row</button>
             <input class="submit" type="submit" value="Create">
         </div>
     </form>
