--- a/src/application/static/css-styles/styles.css
+++ b/src/application/static/css-styles/styles.css
@@ -249,6 +249,7 @@ html, body {
     height: 50vh;
     width: 26vw;
     font-size: 50px;
+    box-shadow: 1px 1px 10px 2px rgba(0, 0, 0, 0.226);
     font-family: Arial, sans-serif;
 }
 
