--- a/src/application/templates/flashcards/train.html
+++ b/src/application/templates/flashcards/train.html
@@ -12,7 +12,7 @@
     <div class="flashcard-train">
         <button id="go-previous" class="step-btn">&#8249;</button>
         <div class="train-card">
-            <span id="card-value" value="front"></span>
+            <span id="card-value" class="front"></span>
         </div>
         <button id="go-next" class="step-btn">&#8250;</button>
     </div>
