shuffling cards in training

--- a/src/application/templates/flashcards/train.html
+++ b/src/application/templates/flashcards/train.html
@@ -16,6 +16,9 @@
         </div>
         <button id="go-next" class="step-btn">&#8250;</button>
     </div>
+    <div class="collection-info">
+        <button id="shuffle" class="shuffle-btn">Shuffle</button>
+    </div>
 </div>
 <script>
     let flashcards = JSON.parse('{{ flashcards | safe }}')
