--- a/src/application/static/css-styles/styles.css
+++ b/src/application/static/css-styles/styles.css
@@ -319,3 +319,22 @@ html, body {
         color: transparent;
     }
 }
+
+.shuffle-btn {
+    border: 2px solid white;
+    border-radius: 5px;
+    background-color: transparent;
+    color: white;
+    padding: 10px 10px;
+    transition: 200ms linear all;
+    font-family: Arial, sans-serif;
+    font-size: 0.7em;
+    width: 10vw;
+    height: 5vh;
+    cursor: pointer;
+}
+
+.shuffle-btn:hover {
+    background-color: white;
+    color: #068D9D;
+}
